# offensive-llvm

.github/: renovate.json
.github/workflows/: codacy.yml  codeql.yml  datree-validation.yml
Allocate_With_Syscalls/: Cargo.toml
Injection_AES_Loader/: Cargo.toml
Injection_Rc4_Loader/: Cargo.toml
Litcrypt_String_Encryption/: Cargo.toml
PEB_Walk/: Cargo.toml
PEB_Walk/src/: types.rs
Process_Injection_CreateThread/: Cargo.toml
Process_Injection_Self_EnumSystemGeoID/: Cargo.toml
UUID_Shellcode_Execution/: Cargo.toml
UUID_Shellcode_Execution/bindings/: Cargo.toml  build.rs
UUID_Shellcode_Execution/src/: main.rs
base64_system_enum/: Cargo.toml
http-https-requests/: Cargo.toml
keyboard_hooking/: Cargo.toml
memN0ps/arsenal-rs/dll_injector_classic-rs/: Cargo.toml  README.md
memN0ps/arsenal-rs/dll_injector_classic-rs/inject/: Cargo.toml
memN0ps/arsenal-rs/dll_injector_classic-rs/testdll/: Cargo.toml
memN0ps/arsenal-rs/module_stomping-rs/: Cargo.toml
memN0ps/arsenal-rs/obfuscate_shellcode-rs/: Cargo.toml
memN0ps/arsenal-rs/process_hollowing-rs/: Cargo.toml
memN0ps/arsenal-rs/rdi-rs/inject/: Cargo.toml
memN0ps/arsenal-rs/rdi-rs/reflective_loader/: Cargo.toml
memN0ps/arsenal-rs/shellcode_runner_classic-rs/: Cargo.toml
memN0ps/eagle-rs/client/: Cargo.toml
memN0ps/eagle-rs/driver/: Cargo.toml
memN0ps/ekko-rs/: Cargo.toml
memN0ps/mimiRust/: Cargo.toml
memN0ps/mmapper-rs/loader/: Cargo.toml
memN0ps/mordor-rs/freshycalls_syswhispers/: Cargo.toml
memN0ps/mordor-rs/hells_halos_tartarus_gate/: Cargo.toml
memN0ps/pemadness-rs/pemadness/: Cargo.toml
memN0ps/psyscalls-rs/parallel_syscalls/: Cargo.toml
memN0ps/srdi-rs/generate_shellcode/: Cargo.toml
memN0ps/srdi-rs/inject/: Cargo.toml
memN0ps/srdi-rs/reflective_loader/: Cargo.toml
memN0ps/srdi-rs/testdll/: Cargo.toml
memfd_create/: Cargo.toml
tcp_ssl_client/: Cargo.toml
tcp_ssl_server/: Cargo.toml
wmi_execute/: Cargo.toml
