[package]
name = "Injection_AES_Loader"
version = "0.1.0"
edition = "2021"
author = "trickster0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = "0.4.1"
reqwest = {version = "0.12.3", features = ["blocking"]}
winapi = {version = "0.3.9", features = ["wincon"]}
libaes = "0.7.0"
