[package]
name = "rc4_encode"
version = "0.1.0"
edition = "2021"
author = "n00b"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = "0.4.1"
reqwest = {version = "0.12.3", features = ["blocking"]}
winapi = {version = "0.3.9", features = ["wincon"]}
libaes = "0.7.0"
rust-crypto = "0.2.36"


[profile.release]
lto = true