[package]
name = "mimiRust"
version = "0.1.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = ["bcrypt", "winnt", "minwindef", "ntdef", "libloaderapi", "psapi", "securitybaseapi", "tlhelp32", "processthreadsapi", "handleapi"] }
winreg = "0.52.0"
kernel32-sys = "0.2.2"
memsec = "0.6.3"
libc = "0.2.153"
byteorder = "1.5.0"
sysinfo = "0.30.11"
anyhow = "1.0"
aes = "0.8.4"
block-modes = "0.9.1"
des = "0.8.1"
regex = "1.10.4"
clap = { version = "4.5.4", features = ["derive"] }
whoami = "1.5.1"
md-5 = "0.10.6"
console = "0.15.8"

[profile.release]
panic = 'abort'
lto = true
opt-level = "z"