[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "loader"

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "memoryapi", "winbase", "impl-default", "errhandlingapi", "handleapi", "winuser", "heapapi", "impl-default"] }
sysinfo = "0.29.9"
clap = { version = "4.4.2", features = ["derive"] }
ureq = "2.7.1"
anyhow = "1.0.75"