[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "loader"

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "memoryapi", "winbase", "impl-default", "errhandlingapi", "handleapi", "winuser", "heapapi", "impl-default"] }
sysinfo = "0.30.5"
clap = { version = "4.4.18", features = ["derive"] }
ureq = "2.9.4"
anyhow = "1.0.79"