[package]
name = "reflective_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "memoryapi", "winbase", "impl-default", "errhandlingapi", "handleapi", "winuser", "heapapi", "impl-default"] }
ntapi = "0.4.1"
wchar = "0.11.0"
log = "0.4.19"
env_logger = "0.10.0"
obfstr = "0.4.3"
utf16_literal = "0.2.1"

[dependencies.num-traits]
version = "0.2.15"
default-features = false